✅🐛 Fixed inconsistent behaviors in quest pools